--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -79,7 +79,9 @@ main{
 .section-title{
     font-weight: 700;
     font-size: 35px;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
+    
+    
 }
 .section-description{
     color: #757575;
@@ -98,4 +100,50 @@ main{
     font-weight: 700;
     font-size: 20px;
     color: #474747;
+}
+/* what i do styles */
+.what-i-do{
+    margin-top: 130px;
+    text-align: center;
+}
+.i-do-description{
+    text-align: center;
+    font-weight: 400;
+    font-size: 18px;
+    color: #757575;
+    margin-top: 30px;
+    margin-bottom: 50px;
+    padding-left: 300px;
+    padding-right: 300px;
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+    text-align: left;
+}
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+    color: #181818;
+    margin-top: 30px;
+    margin-bottom: 20px;
+
+}
+.skill-description{
+    color: #757575;
+    
+}
+/*Resume Styles */
+.section-title-r{
+    margin-top: 130px;
+    text-align: center;
+    font-weight: 700;
+    font-size: 35px;
+    color: #181818;
 }
