--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -143,7 +143,42 @@ main{
 .section-title-r{
     margin-top: 130px;
     text-align: center;
-    font-weight: 700;
+    margin-bottom: 112px;
     font-size: 35px;
-    color: #181818;
+    font-weight: 700;
+}
+.resume-content{
+    display: flex;
+    gap: 24px;
+}
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.resume-title{
+    font-weight: 700;
+    font-size: 30px;
+}
+.resume .title{
+   
+    color: #474747;
+    margin-bottom: 10px;
+    font-weight: 700;
+    font-size: 25px
+
+   
+}
+.resume .sub-title{
+    color: #757575;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
+    
+}
+.resume-description{
+    color: #757575;
+}
+.resume-button{
+    margin-top: 50px;
+    text-align: center;
 }
