contact us added

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -27,10 +27,11 @@
 nav{
     display: flex;
     justify-content: space-between;
-    margin: 50px 200px;
+    margin: 30px 200px;
 }
 .nav-title{
     font-weight: 800;
+    
     font-size: 45px;
 }
 nav ul{
@@ -181,4 +182,26 @@ main{
 .resume-button{
     margin-top: 50px;
     text-align: center;
+}
+/* contract styles */
+.contact{
+    display: flex;
+    gap: 100px;
+    background: #FFF8F3;
+    padding: 130px 200px;
+}
+.contact .section-title{
+    text-align: left;
+}
+.contact input[type="text"], input[type="email"], textarea{
+    margin-bottom: 24px;
+    border: 0;
+    width: 100;
+    padding: 18px 30px;
+}
+input{
+    height: 64px;
+}
+.contact a{
+    text-decoration: none;
 }
