--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -106,7 +106,7 @@ main{
 .about{
     text-align: center;
     margin-top: 130px;
-    background: #ffd1b0;
+    background: #ffe0c9;
     border-radius: 10px;
     padding: 130px 150px;
 }
@@ -158,6 +158,7 @@ main{
 .skills-container{
     display: flex;
     gap: 24px;
+    /* gap between */
 }
 .skill{
     background: #FFFFFF;
