--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -180,6 +180,7 @@ main{
     
 }
 /*Resume Styles */
+
 .section-title-r{
     margin-top: 130px;
     text-align: center;
@@ -189,7 +190,8 @@ main{
 }
 .resume-content{
     display: flex;
-    gap: 24px;
+    gap: 300px;
+    /* gap between 2 sides */
 }
 .resume-item{
     margin-top: 30px;
@@ -220,8 +222,10 @@ main{
 }
 .resume-button{
     margin-top: 50px;
+    margin-bottom: 20px;
     text-align: center;
 }
+
 /* contract styles */
 .contact{
     display: flex;
